# recipe-chatbot

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: main.py  system_prompt.md  tracing.py  utils.py
data/: sample_queries.csv
homeworks/hw1/: readme.md
homeworks/hw2/: README.md  hw2_walkthrough.ipynb
homeworks/hw2/reference_files/: README.md  query_response.jsonl  viewer.html
homeworks/hw3/: README.md  hw3_walkthrough.ipynb
homeworks/hw4/: README.md  hw4_walkthrough.ipynb
homeworks/hw4/reference_files/: query_viewer.html
homeworks/hw5/: README.md  hw5_walkthrough.ipynb
homeworks/hw5/analysis/: transition_heatmaps.py
homeworks/hw5/reference_files/: labeled_traces.jsonl  raw_traces.jsonl  trace_viewer.html
homeworks/optional/galileo-integration/: README.md
scripts/: bulk_test.py  view_conversations.py
